# tuxracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  SDL3BuildFix.patch  alglib.h  button.c  course_quad.cpp  course_render.c  credits.c  event_select.c  fps.c  game_config.c  gl_util.c  gl_util.h  hier_util.c  hud.c  loop.c  main.c  mainwindow.cpp  mainwindow.h  quadtree.cpp  race_select.c  render_util.c  render_util.h  screenshot.c  splash_screen.c  tex_font_metrics.c  textures.c  track_marks.c  tuxracer.h  tuxracer.pro  ui_mgr.c  ui_snow.c  ui_theme.c  winsys.c  winsys.cpp  winsys.h
